# gepard

./: .coverage  .coveragerc  .gitconfig  .gitignore  .sublime-project  .travis.yml  Approach.py  BUGS  CHANGELOG.rst  Changelog  Data.py  Fitter.py  GEPARD.INI  Makefile  Model.py  README  README.md  TODO  abbrevs.py  ansatz.py  brain.py  constants.py  coverage.xml  dispersion.py  fit.py  fits.py  models.py  nn.py  optModel.f  plots.py  publish.py  pype.py  pytest.ini  quadrature.py  requirements.txt  results.py  setup.cfg  setup.py  test.py  tests.py  (+5 more)
DA_modification/: DVMP_LO_new_DA_a2_LO_evolution.ipynb
Tests/: GEPARD.INI  README  acc.bat
data/: README  coverage.py  newid.py  polys.py
doc/: gepard.css  robodoc.rc
ex/: BHvsDVCS.py  CLAS-14.py  CLAS-14FT.py  EIC.py  GEPARD.INI  HMG10.py  LesHouches.py  Makefile  README  anatomy.bat  anatomyNS.bat  evol.bat  evolut.bat  evolutNS.bat  figs.fm  fit_KM15b.py  fit_KM15c.py  fit_KMM12.py  fit_LO.py  fit_NLO.py  fit_NLO4.py  fit_NLO_sx.py  fit_NN2.py  fit_NNfix3.py  fit_dvem.py  fit_dvem2.py  grids.py  hermes_CFFplots.py  hermes_OBSplots.py  hermes_local.py  morgan.py  morgan12.py  newid.py  plt  radNLO.bat  radNLONS.bat  radNNLO.bat  radNNLONS.bat  radQ.bat  xstest.py
fits/: .gdbinit  DATASET0  DATASET1  DATASET2  DATASET3  DATASET4  DATASET5  DATASET6  DATASET7  DATASET8  DATASET9  FIT.CMD  FIT.INI  FIT.PLT  FIT_ALL.INI  GEPARD.INI  MINUIT.CMD  MINUIT_FITOLD.CMD  dis.cmd  dvcs.cmd  dvcsexp.cmd  dvem.nb  figs.fm  fit  fit-devel.nb  fit.bat  fit.cmd  fit.nb  fit12.bat  fit34.bat  fit56.bat  fit78.bat  fit90.bat  (+9 more)
(+453 files in other folders)
