# Static metadata (setup.cfg): guaranteed to be the same every time. This is
# simpler, easier to read, and avoids many common errors, like encoding errors.

[metadata]
name = gepard
version = 0.9.9
author = Krešimir Kumerički
author_email = kkumer@phy.hr
description = Tool for studying the 3D quark and gluon distributions in the nucleon
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gepard.phy.hr/
project_urls =
    Sources = https://github.com/kkumer/gepard
    Bug Tracker = https://github.com/kkumer/gepard/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent

[options]
packages = gepard
python_requires = >=3.7

[mypy-joblib.*]
ignore_missing_imports = True

[mypy-gepard.pygepard]
ignore_missing_imports = True

[darglint]
docstring_style=google
strictness=short
ignore=DAR401
